--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/intro/template/wizard-basic-info-intro.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/intro/template/wizard-basic-info-intro.html
@@ -1,15 +1,11 @@
 <div class="row card-header">
-	<div class="col-sm-10">
+	<div class="col-xs-6 col-md-6">
 		<h1>{{ 'Welcome to UnitPal' | translate }} <small>{{ 'let\'s set up your hotel.' | translate }}</small></h1>
 	</div>
 
-	<div class="col-sm-2">
-		<div class="col-xs-2 form-group pull-right top_search text-right">
-		</div>
-	</div>
 </div>
 <div class="row card-body page-info">
-	<div class="overview-left" class='col-xs-9 col-md-9'>
+	<div class='col-xs-9 col-md-9'>
 		<div class="col-xs-9 col-md-9">
 			<p>{{ '[Wizard Step 0] Welcome Message' | translate }}</p>
 		</div>
