--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
@@ -24,7 +24,7 @@
 				</button>
 					</div>
 				</div>
-				<small class="text-muted"><i class="fa fa-info-circle"></i>  {{ 'If allowed, public price products will be available for this customer.' | translate }}</small>
+				<small class="text-muted"><i class="fa fa-info-circle"></i>  {{ 'If allowed, all public price products will be available for this customer.' | translate }}</small>
 			</div>
 			<div class="col-md-4 col-xs-12 form-group">
 				<label>{{ 'Confidential Price Products' | translate }}</label>
